--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ apply plugin: 'com.jfrog.bintray'
 ext {
     libraryName = 'ImageLoader'
     libraryDescription = 'Image loader tool for Android'
-    libraryVersion = '1.9.9'
+    libraryVersion = '2.0.0'
     artifact = 'image-loader'
     developerId = 'yuriy-budiyev'
     developerName = 'Yuriy Budiyev'
@@ -46,7 +46,7 @@ android {
     defaultConfig {
         minSdkVersion 14
         targetSdkVersion 26
-        versionCode 51
+        versionCode 52
         versionName libraryVersion
     }
 
@@ -64,6 +64,7 @@ android {
 
 dependencies {
     api 'com.android.support:support-annotations:26.1.0'
+    api 'com.android.support:exifinterface:26.1.0'
 }
 
 group = publishedGroupId
