--- a/build.gradle
+++ b/build.gradle
@@ -143,7 +143,7 @@ bintray {
         vcsUrl = gitUrl
         licenses = allLicenses
         publish = true
-        publicDownloadNumbers = true
+        publicDownloadNumbers = false
 
         version {
             desc = libraryDescription
