--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.1'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:2.0'
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.0'
     }
 }
 
@@ -25,7 +25,7 @@ apply plugin: 'com.jfrog.bintray'
 ext {
     libraryName = 'ImageLoader'
     libraryDescription = 'Image loader tool for Android'
-    libraryVersion = '2.0.2'
+    libraryVersion = '2.0.3'
     artifact = 'image-loader'
     developerId = 'yuriy-budiyev'
     developerName = 'Yuriy Budiyev'
@@ -40,13 +40,13 @@ ext {
 }
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion "26.0.3"
+    compileSdkVersion 27
+    buildToolsVersion '27.0.2'
 
     defaultConfig {
         minSdkVersion 14
-        targetSdkVersion 26
-        versionCode 54
+        targetSdkVersion 27
+        versionCode 55
         versionName libraryVersion
     }
 
@@ -63,8 +63,8 @@ android {
 }
 
 dependencies {
-    api 'com.android.support:support-annotations:26.1.0'
-    api 'com.android.support:exifinterface:26.1.0'
+    api 'com.android.support:support-annotations:27.0.2'
+    api 'com.android.support:exifinterface:27.0.2'
 }
 
 group = publishedGroupId
