--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.0'
+        classpath 'com.android.tools.build:gradle:3.2.1'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4'
     }
@@ -41,6 +41,7 @@ ext {
 
 android {
     compileSdkVersion 28
+    buildToolsVersion '28.0.3'
 
     defaultConfig {
         minSdkVersion 14
@@ -62,7 +63,7 @@ android {
 }
 
 dependencies {
-    api 'androidx.annotation:annotation:1.0.0'
+    api 'androidx.annotation:annotation:1.0.1'
     api 'androidx.exifinterface:exifinterface:1.0.0'
 }
 
