--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,6 @@
 buildscript {
+    ext.kotlin_version = '1.3.11'
+
     repositories {
         google()
         jcenter()
@@ -8,6 +10,7 @@ buildscript {
         classpath 'com.android.tools.build:gradle:3.2.1'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
@@ -19,6 +22,7 @@ allprojects {
 }
 
 apply plugin: 'com.android.library'
+apply plugin: 'kotlin-android'
 apply plugin: 'com.github.dcendents.android-maven'
 apply plugin: 'com.jfrog.bintray'
 
@@ -44,14 +48,15 @@ android {
     buildToolsVersion '28.0.3'
 
     defaultConfig {
-        minSdkVersion 14
+        minSdkVersion 19
         targetSdkVersion 28
         versionCode 88
         versionName libraryVersion
     }
 
-    dexOptions {
-        javaMaxHeapSize "2048m"
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_7
+        targetCompatibility JavaVersion.VERSION_1_7
     }
 
     buildTypes {
@@ -63,8 +68,9 @@ android {
 }
 
 dependencies {
-    api 'androidx.annotation:annotation:1.0.1'
-    api 'androidx.exifinterface:exifinterface:1.0.0'
+    compileOnly "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    compileOnly 'androidx.exifinterface:exifinterface:1.0.0'
+    compileOnly 'androidx.annotation:annotation:1.0.1'
 }
 
 group = publishedGroupId
@@ -149,4 +155,7 @@ bintray {
             vcsTag = 'v' + libraryVersion
         }
     }
+}
+repositories {
+    mavenCentral()
 }
